--- a/src/index.css
+++ b/src/index.css
@@ -146,10 +146,14 @@ form {
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
   margin-bottom: -20px;
-  max-height: 60%;
+  max-height: 50%;
 }
 
 @media (min-height: 725px){
   .cuadro2 {
   }
+}
+.form2{
+  height: 10%;
+  margin-bottom: 1rem;
 }
